--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:10-alpine
 MAINTAINER Jeff YU, jeff@jamma.cn
 ENV NODE_ENV production
+RUN npm i -g yarn
 RUN mkdir -p /app
 WORKDIR /app
 CMD npm start
