--- a/rabbitmq-mqtt/Dockerfile
+++ b/rabbitmq-mqtt/Dockerfile
@@ -1,3 +1,3 @@
-FROM rabbitmq:3.6-management-alpine
+FROM rabbitmq:management-alpine
 
 RUN rabbitmq-plugins enable --offline rabbitmq_mqtt rabbitmq_management_visualiser rabbitmq_shovel rabbitmq_shovel_management
